# get-knowledge-from-yt

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
apps/web/: .env.example  Dockerfile  package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: ArticleReader.tsx  CancelPendingJobButton.tsx  HomeDashboard.tsx  MarkdownBody.tsx  Nav.tsx  ReadingOutline.tsx  RetryFailedJobButton.tsx  StatusBadge.tsx
apps/web/src/lib/: api.ts  gkfyRealtime.ts  jobTableDisplay.ts  jobsLive.ts  llmFormPrefs.ts  markdown.ts  modelOptions.ts  useGkfyRealtime.ts
python/: README.md  pyproject.toml
python/src/yt_knowledge_ingest/: __init__.py  antigravity.py  auto_ingest_prompt.py  cli.py  collection_classifier.py  frontmatter.py  fsutil.py  game_theory_builtin.py  gemini_client.py  ingest.py  model_options.py  paths.py  prompt_generator.py  prompts.py  title_map.py  urls.py  youtube_titles.py
python/src/yt_knowledge_ingest/prompts/: .gitignore  readme.txt
python/tests/: test_antigravity.py  test_auto_ingest_prompt.py  test_cli.py  test_collection_classifier.py  test_frontmatter.py  test_fsutil.py  test_gemini_client.py  test_ingest_run.py  test_paths.py  test_prompt_generator.py  test_prompt_markdown_split.py  test_prompts.py  test_urls.py
services/api/: .env.example  Dockerfile  requirements.txt
services/api/app/: __init__.py  antigravity_auth.py  config.py  db.py  main.py  realtime.py  repo_export.py  worker.py
(+10 files in other folders)
